fix: hide scrollbar everywhere

--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,16 @@ body {
     -webkit-font-smoothing: antialiased;
 }
 
+/* Hide Scrollbar */
+
+body::-webkit-scrollbar{
+    display: none;
+}
+
+html {
+    scrollbar-width: none;
+}
+
 .listingblock .content {
     font-size: .9em;
 }
